Implemented data models and data relationships, implemented database seeder

--- a/GDrinks/GDrinks.Data/GDrinks.Data.csproj
+++ b/GDrinks/GDrinks.Data/GDrinks.Data.csproj
@@ -13,4 +13,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\GDrinks.Models\GDrinks.Models.csproj" />
+  </ItemGroup>
+
 </Project>
