--- a/GDrinks/GDrinks.Web/appsettings.json
+++ b/GDrinks/GDrinks.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-GDrinks.Web-70349558-76B5-4A1D-A96C-24AA3D6F2D14;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-DEHICSC\\SQLEXPRESS01;Database=GDrinksDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
