--- a/GDrinks/GDrinks.Data/GDrinks.Data.csproj
+++ b/GDrinks/GDrinks.Data/GDrinks.Data.csproj
@@ -5,6 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20190407190452_ValidationOnDrinkModel.cs" />
+    <Compile Remove="Migrations\20190407190452_ValidationOnDrinkModel.Designer.cs" />
+    <Compile Remove="Migrations\20190409060039_UpdatedMaxLengthPropertiesOnDrink.cs" />
+    <Compile Remove="Migrations\20190409060039_UpdatedMaxLengthPropertiesOnDrink.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.2.3">
